	--- 9.8.7b1 released ---

3688.	[bug]		loadnode could return a freed node on out of memory.
			[RT #35106]

3683.	[cleanup]	Add a more detailed "not found" message to rndc
			commands which specify a zone name. [RT #35059]

3681.	[port]		Update the Windows build system to support feature
			selection and WIN64 builds.  This is a work in
			progress. [RT #34160]

3679.	[bug]		dig could fail to clean up TCP sockets still
			waiting on connect(). [RT #35074]

3678.	[port]		Update config.guess and config.sub. [RT #35060]

3677.	[bug]		'nsupdate' leaked memory if 'realm' was used multiple
			times.  [RT #35073]

3676.	[bug]		"named-checkconf -z" now checks zones of type
			hint as well as master. [RT #35046]

3675.	[misc]		Provide a place for third parties to add version
			information for their extensions in the version
			file by setting the EXTENSIONS variable.

3670.	[bug]		Address read after free in server side of
			lwres_getrrsetbyname. [RT #29075]

3669.	[port]		freebsd: --with-gssapi needs -lhx509. [RT #35001]

3668.	[bug]		Fix cast in lex.c which could see 0xff treated as eof.
			[RT #34993]
3667.	[test]		dig: add support to keep the TCP socket open between
			successive queries (+[no]keepopen).  [RT #34918]

3664.	[bug]		Updated OpenSSL PKCS#11 patches to fix active list
			locking and other bugs. [RT #34855]

3663.	[bug]		Address bugs in dns_rdata_fromstruct and
			dns_rdata_tostruct for WKS and ISDN types. [RT #34910]

3662.	[bug]		'host' could die if a UDP query timed out. [RT #34870]

3660.	[cleanup]	Changed the name of "isc-config.sh" to "bind9-config".
			[RT #23825]

3658.	[port]		linux: Address platform specific compilation issue
			when libcap-devel is installed. [RT #34838]

3656.	[bug]		Treat an all zero netmask as invalid when generating
			the localnets acl. [RT #34687]

3655.	[cleanup]	Simplify TCP message processing when requesting a
			zone transfer.  [RT #34825]

3654.	[bug]		Address race condition with manual notify requests.
			[RT #34806]